# cogs

./: .gitignore  CLAUDE.md  README.md  mise.toml  setup.sh
docs/: PLAN.md
phase1-canvas/: DEBUGGING.md  DISCUSSION.md  DX_OBSERVATIONS.md  README.md  TESTING.md  build.gradle  mise.toml
phase1-canvas/app/: build.gradle
phase1-canvas/app/src/main/: AndroidManifest.xml
phase1-canvas/app/src/main/java/com/graphics/phase1/: CanvasView.java  MainActivity.java  MyCanvasView.java
phase2-surfaceview/: .gitignore  DISCUSSION.md  README.md  build.sh  mise.toml  settings.gradle
phase2-surfaceview/app/: build.gradle
phase2-surfaceview/app/src/main/: AndroidManifest.xml
phase2-surfaceview/app/src/main/java/com/graphics/phase2/: MainActivity.java  MySurfaceView.java  SurfaceRendererView.java
phase2-surfaceview/app/src/main/res/values/: styles.xml
phase2b-textureview/: DISCUSSION.md  README.md  install.sh  mise.toml
phase2b-textureview/app/: build.gradle
phase2b-textureview/app/src/main/: AndroidManifest.xml
phase2b-textureview/app/src/main/java/com/graphics/phase2b/: MainActivity.java  MyTextureView.java
phase3-nativewindow/: DISCUSSION.md  README.md  build.sh  install.sh  mise.toml  settings.gradle
phase3-nativewindow/app/: build.gradle
phase3-nativewindow/app/src/main/: AndroidManifest.xml
phase3-nativewindow/app/src/main/cpp/: CMakeLists.txt  native_renderer.cpp
phase3-nativewindow/app/src/main/java/com/graphics/phase3/: MainActivity.java  MySurfaceView.java  NativeRenderer.java
phase3-nativewindow/app/src/main/res/values/: styles.xml
phase4-opengl/: DISCUSSION.md  mise.toml  settings.gradle
phase4-opengl/app/: build.gradle
phase4-opengl/app/src/main/: AndroidManifest.xml
phase4-opengl/app/src/main/cpp/: CMakeLists.txt  gl_renderer.cpp
phase4-opengl/app/src/main/java/com/graphics/phase4/: GLRenderer.java  MainActivity.java  MyGLSurfaceView.java
